Versión preliminar de Acción para descargar PDF con cédula de participación y anexo de condiciones.

--- a/WSEmision/WSEmision.csproj
+++ b/WSEmision/WSEmision.csproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="MikTex\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +204,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Plantillas\LogoGMX.jpg" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -235,6 +237,8 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Plantillas\EjemploCoaseguro.pdf" />
+    <Content Include="Plantillas\main.tex" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
