--- a/WSEmision/WSEmision.csproj
+++ b/WSEmision/WSEmision.csproj
@@ -204,7 +204,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Business\Extensions\CollectionExtensions.cs" />
+    <Compile Include="Models\Business\IO\Coaseguro\AnexoLectorEscritor.cs" />
     <Compile Include="Models\Business\IO\Coaseguro\CedulaAnexoLectorEscritor.cs" />
+    <Compile Include="Models\Business\IO\Coaseguro\CedulaLectorEscritor.cs" />
     <Compile Include="Models\Business\IO\IEscritorReporte.cs" />
     <Compile Include="Models\Business\IO\ILectorReporte.cs" />
     <Compile Include="Models\Business\IO\LatexLectorEscritor.cs" />
@@ -212,6 +214,7 @@
     <Compile Include="Models\DAL\DAO\CoaseguroDao.cs" />
     <Compile Include="Models\DAL\DTO\Coaseguro\AnexoCondicionesParticularesCoaseguro.cs" />
     <Compile Include="Models\DAL\DTO\Coaseguro\CedulaParticipacionCoaseguroResultSet.cs" />
+    <Compile Include="Models\DAL\DTO\Coaseguro\EncabezadosReportesEmisionResultSet.cs" />
     <Compile Include="Models\DAL\Entities\EmisionContext.cs" />
     <Compile Include="Models\DAL\Entities\tramo.cs" />
     <Compile Include="Models\DAL\Entities\tsuc.cs" />
@@ -291,6 +294,8 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Plantillas\Coaseguro\CedulaParticipacion.tex" />
+    <Content Include="Plantillas\Coaseguro\AnexoCondiciones.tex" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
