--- a/WSEmision/WSEmision.csproj
+++ b/WSEmision/WSEmision.csproj
@@ -302,6 +302,11 @@
     <Content Include="Scripts\jquery-3.0.0.min.js" />
     <Content Include="Scripts\jquery-3.0.0.slim.js" />
     <Content Include="Scripts\jquery-3.0.0.slim.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -338,6 +343,7 @@
     <Content Include="webfonts\fa-brands-400.eot" />
     <Content Include="Views\Coaseguro\_CedulaParticipacion.cshtml" />
     <Content Include="Views\Coaseguro\_AnexoCondiciones.cshtml" />
+    <Content Include="Views\Coaseguro\_Encabezado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
