--- a/WSEmision/WSEmision.csproj
+++ b/WSEmision/WSEmision.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CaratulaDanosWSController.cs" />
     <Compile Include="Controllers\CoaseguroController.cs" />
     <Compile Include="Controllers\CoaseguroWSController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -215,7 +216,7 @@
     <Compile Include="Models\DAL\DAO\CoaseguroDao.cs" />
     <Compile Include="Models\DAL\DTO\Coaseguro\AnexoCondicionesParticularesCoaseguro.cs" />
     <Compile Include="Models\DAL\DTO\Coaseguro\CedulaParticipacionCoaseguroResultSet.cs" />
-    <Compile Include="Models\DAL\DTO\Coaseguro\EncabezadosReportesEmisionResultSet.cs" />
+    <Compile Include="Models\DAL\DTO\EncabezadosReportesEmisionResultSet.cs" />
     <Compile Include="Models\DAL\Entities\EmisionContext.cs" />
     <Compile Include="Models\DAL\Entities\tramo.cs" />
     <Compile Include="Models\DAL\Entities\tsuc.cs" />
@@ -297,6 +298,8 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Plantillas\Coaseguro\CedulaParticipacion.tex" />
     <Content Include="Plantillas\Coaseguro\AnexoCondiciones.tex" />
+    <Content Include="Plantillas\CaratulaDA\CaratulaDA.tex" />
+    <Content Include="Plantillas\CaratulaDA\CaratulaDA.pdf" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
