--- a/WSEmision/Web.config
+++ b/WSEmision/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EntornoBD" value="name=UAT" />
+    <add key="DirectorioLatex" value="C:\Users\Public\Documents\Latex" />
+    <add key="RutaXelatex" value="C:\Users\Public\Documents\Latex\MikTex\texmfs\install\miktex\bin\miktex-xelatex.exe" />
+    <add key="DirectorioEntradaLatex" value="C:\Users\Public\Documents\Latex\media" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
